Modifiche config file CFD

--- a/CFD/turb_SA_RAE2822.cfg
+++ b/CFD/turb_SA_RAE2822.cfg
@@ -14,10 +14,10 @@
 % Physical governing equations (EULER, NAVIER_STOKES,
 %                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
 %                               POISSON_EQUATION)                        
-SOLVER= RANS
+SOLVER= EULER
 %
 % Specify turbulent model (NONE, SA, SA_NEG, SST)
-KIND_TURB_MODEL= SA
+%KIND_TURB_MODEL= SA
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
@@ -27,7 +27,7 @@ RESTART_SOL= NO
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
-MACH_NUMBER= 0.729
+MACH_NUMBER= 0.05
 %
 % Angle of attack (degrees, only for compressible flows)
 AOA= 0
@@ -36,10 +36,10 @@ AOA= 0
 FREESTREAM_TEMPERATURE= 288.15
 %
 % Reynolds number (non-dimensional, based on the free-stream values)
-REYNOLDS_NUMBER= 6.5E6
+REYNOLDS_NUMBER= 4E6
 %
 % Reynolds length (1 m by default)
-REYNOLDS_LENGTH= 1.0
+REYNOLDS_LENGTH= 0.32
 
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
@@ -59,9 +59,12 @@ REF_DIMENSIONALIZATION= FREESTREAM_VEL_EQ_ONE
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 
 MARKER_FAR= (farfield)
-MARKER_INLET= (inlet, 303.174, 101353.5, 1.0, 0.0, 0.0 )
+MARKER_HEATFLUX= (Airfoil1, Airfoil2)
+MARKER_INLET= (inlet, 288.15, 20, 1.0, 0.0, 0.0 )
 MARKER_OUTLET= (outlet, 101325)
-MARKER_EULER= (Airfoil1, Airfoil2)
+MARKER_EULER= (bottom)
+MARKER_MONITORING= (Airfoil1, Airfoil2)
+MARKER_PLOTTING= (Airfoil1, Airfoil2)
 
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
@@ -139,14 +142,14 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
 %
 % Convective numerical method (SCALAR_UPWIND)
-CONV_NUM_METHOD_TURB= SCALAR_UPWIND
+%CONV_NUM_METHOD_TURB= SCALAR_UPWIND
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence equations.
 %           Required for 2nd order upwind schemes (NO, YES)
-MUSCL_TURB= NO
+%MUSCL_TURB= NO
 %
 % Time discretization (EULER_IMPLICIT)
-TIME_DISCRE_TURB= EULER_IMPLICIT
+%TIME_DISCRE_TURB= EULER_IMPLICIT
 
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
